--- a/app/src/main/res/layout/activity_fine_list_select.xml
+++ b/app/src/main/res/layout/activity_fine_list_select.xml
@@ -4,7 +4,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin"
         android:layout_height="match_parent"
@@ -23,6 +22,8 @@
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
+                android:padding="5dp"
+                android:drawableRight="@android:drawable/ic_menu_search"
                 android:singleLine="true"
                 android:textColor="@android:color/white"/>
 
@@ -43,6 +44,6 @@
             android:layout_marginTop="16dp"
             android:background="@color/colorAccent"
             android:text="@string/btn_proceed"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textStyle="bold"/>
 </LinearLayout>
