--- a/app/src/main/res/layout/activity_pay_fine.xml
+++ b/app/src/main/res/layout/activity_pay_fine.xml
@@ -1,62 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_horizontal_margin"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:minWidth="300dp"
         android:layout_height="wrap_content"
         tools:context=".Authority.PayFine">
+    <LinearLayout
+            android:orientation="vertical"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:layout_width="wrap_content"
+            android:minWidth="300dp"
+            android:layout_height="wrap_content"
+    >
 
-
-    <android.support.design.widget.TextInputLayout
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <EditText
-                android:id="@+id/inputNo"
+        <TabHost
+                android:id="@+id/tabHost"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:hint="@string/hint_vehicle_licence"
-                android:inputType="text"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black"/>
+                android:layout_height="match_parent"
 
-    </android.support.design.widget.TextInputLayout>
-    <Button
-            android:id="@+id/scan"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorAccent"
-            android:text="@string/btn_scan"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"/>
+                android:layout_centerHorizontal="true">
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                <TabWidget
+                        android:id="@android:id/tabs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                </TabWidget>
+                <FrameLayout
+                        android:id="@android:id/tabcontent"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                    <LinearLayout
+                            android:padding="10dp"
+                            android:id="@+id/first_Tab"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                        <Button
+                                android:id="@+id/scanLicence"
+                                style="?android:textAppearanceSmall"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                android:background="@color/colorAccent"
+                                android:text="Scan Licence no"
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold"/>
+
+                        <EditText
+                                android:layout_marginTop="10dp"
+                                android:id="@+id/inputNo"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="10dp"
+                                android:hint="@string/hint_vehicle_licence"
+                                android:inputType="text"
+                                android:textColor="@android:color/black"
+                                android:textColorHint="@android:color/black"/>
+                    </LinearLayout>
+                    <LinearLayout
+                            android:id="@+id/second_Tab"
+                            android:padding="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                        <Button
+                                android:id="@+id/scan"
+                                style="?android:textAppearanceSmall"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                android:background="@color/colorAccent"
+                                android:text="Scan Vehicle NO"
+                                android:textColor="@android:color/white"
+                                android:textStyle="bold"/>
+
+                        <EditText
+                                android:layout_marginTop="10dp"
+                                android:id="@+id/inputVehicleNo"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="10dp"
+                                android:hint="Enter Vehicle No"
+                                android:inputType="text"
+                                android:textColor="@android:color/black"
+                                android:textColorHint="@android:color/black"/>
+                    </LinearLayout>
+
+                </FrameLayout>
+            </LinearLayout>
+        </TabHost>
+        <android.support.design.widget.TextInputLayout
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
 
-    <Button
-            android:id="@+id/showVehicle"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorAccent"
-            android:text="@string/btn_no_licence"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"/>
+        </android.support.design.widget.TextInputLayout>
 
 
-    <Button
-            android:id="@+id/proceed"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorAccent"
-            android:text="@string/btn_proceed"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"/>
-</LinearLayout>
+        <LinearLayout
+                android:gravity="right"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <Button
+                    android:layout_marginLeft="5dp"
+                    android:id="@+id/cancel"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@null"
+                    android:text="Cancel"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold"/>
+            <Button
+                    android:id="@+id/proceed"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@null"
+                    android:text="@string/btn_proceed"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold"/>
+        </LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
