--- a/app/src/main/res/layout/activity_validate_fine.xml
+++ b/app/src/main/res/layout/activity_validate_fine.xml
@@ -11,12 +11,12 @@
 
 
     <android.support.v7.widget.RecyclerView
-            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:id="@+id/recylerType"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"/>
     <TextView
+            android:visibility="gone"
             android:text="Totoal" android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:id="@+id/total"/>
@@ -29,6 +29,6 @@
             android:layout_marginTop="16dp"
             android:background="@color/colorAccent"
             android:text="@string/btn_proceed"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textStyle="bold"/>
 </LinearLayout>
