--- a/app/src/main/res/layout/item_licence_type.xml
+++ b/app/src/main/res/layout/item_licence_type.xml
@@ -4,29 +4,28 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:gravity="center"
+        android:layout_marginTop="5dp"
         android:layout_height="wrap_content">
 
 
     <TextView
             android:id="@+id/type"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
+            android:layout_weight="1.5"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/licenceType"
-            android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:singleLine="true"
+            android:textSize="15sp"
             android:textColor="@android:color/black"/>
 
 
     <TextView
+
             android:layout_weight="1"
             android:id="@+id/issueDate"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/issueDate"
-            android:maxLines="1"
-            android:singleLine="true"
+            android:textSize="15sp"
             android:textColor="@android:color/black"/>
 
     <ImageView
