--- a/app/src/main/res/layout/item_select_fine.xml
+++ b/app/src/main/res/layout/item_select_fine.xml
@@ -1,20 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:padding="@dimen/activity_horizontal_margin"
-              android:layout_width="match_parent"
-              android:gravity="center"
-              android:layout_height="wrap_content">
-    <TextView android:id="@+id/licenceNo"
-              android:text="123"
-              android:layout_weight="1"
-              android:layout_width="0dp"
-              android:layout_height="wrap_content"/>
-    <TextView android:id="@+id/price"
-              android:text="123"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"/>
-    <CheckBox android:layout_height="wrap_content"
-              android:layout_width="wrap_content"
-              android:id="@+id/checkbox"/>
-</LinearLayout>
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    android:layout_width="match_parent"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginLeft="2dp"
+                                    android:layout_marginRight="2dp"
+                                    android:layout_height="wrap_content">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:orientation="horizontal"
+                  android:padding="@dimen/activity_horizontal_margin"
+                  android:layout_width="match_parent"
+
+                  android:layout_height="wrap_content">
+        <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+            <TextView android:id="@+id/licenceNo"
+                      android:text="123"
+                      android:textSize="16sp"
+                      android:textStyle="bold"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"/>
+            <TextView android:id="@+id/section"
+                      android:layout_marginTop="5dp"
+                      android:text="123"
+                      android:textSize="14sp"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <TextView android:id="@+id/price"
+                  android:textStyle="bold"
+                  android:layout_marginLeft="10dp"
+                  android:textSize="16sp"
+                  android:text="123"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"/>
+
+        <CheckBox
+                android:layout_marginLeft="10dp"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/checkbox"/>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
