--- a/app/src/main/res/layout/item_tow.xml
+++ b/app/src/main/res/layout/item_tow.xml
@@ -23,14 +23,31 @@
                 android:text="adf"
                 android:autoLink="phone"
                 android:id="@+id/contact"/>
+        <LinearLayout
+                android:orientation="horizontal"
 
-        <TextView
-                android:layout_marginTop="10dp"
-                android:textStyle="italic"
-                android:gravity="right"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="adf"
-                android:id="@+id/date"/>
+                android:layout_height="wrap_content">
+
+            <TextView
+                    android:layout_weight="1"
+                    android:layout_marginTop="10dp"
+                    android:textStyle="italic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="adf"
+                    android:id="@+id/date"/>
+
+            <TextView
+                    android:layout_marginTop="10dp"
+                    android:textStyle="italic"
+                    android:gravity="right"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="View Photos"
+                    android:id="@+id/viewPhotos"/>
+        </LinearLayout>
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
