--- a/app/src/main/res/layout/item_validate_find.xml
+++ b/app/src/main/res/layout/item_validate_find.xml
@@ -7,34 +7,49 @@
 
 
     <LinearLayout
-            android:gravity="center"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <TextView android:id="@+id/licenceNo"
-                  android:text="123"
-                  android:layout_weight="1"
-                  android:layout_width="0dp"
-                  android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                  android:layout_height="wrap_content"/>
-        <TextView android:id="@+id/price"
-                  android:layout_marginLeft="10dp"
-                  android:text="123"
-                  android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"/>
-        <TextView
+        <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:orientation="vertical"
+
+                android:layout_height="wrap_content">
+            <TextView android:id="@+id/licenceNo"
+                      android:text="123"
+                      android:textStyle="bold"
+                      android:layout_width="wrap_content"
+                      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                      android:layout_height="wrap_content"/>
+            <TextView
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:layout_marginTop="5dp"
+                    android:text="Expand"
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:id="@+id/expand"/>
+        </LinearLayout>
+        <LinearLayout
+                android:gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:text="3 time"
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:id="@+id/times"/>
+                android:layout_height="wrap_content">
+            <TextView android:id="@+id/price"
+                      android:textStyle="bold"
+                      android:text="123"
+                      android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"/>
+            <TextView
+
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:text="3 time"
+                    android:layout_width="wrap_content"
+                    android:id="@+id/times"/>
+        </LinearLayout>
     </LinearLayout>
-    <TextView
-            android:layout_marginTop="10dp"
-            android:text="Expand"
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content"
-            android:id="@+id/expand"/>
+
 </LinearLayout>
