--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -186,7 +186,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:background="@color/colorPrimary"
+                   android:background="@color/colorPrimaryDark"
                     android:text="@string/btn_pay"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"/>
@@ -197,18 +197,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:background="@color/colorPrimary"
+                   android:background="@color/colorPrimaryDark"
                     android:text="@string/btn_read_info"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"/>
-
+            <Button
+                    android:id="@+id/history"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                   android:background="@color/colorPrimaryDark"
+                    android:text="Check Violation History"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"/>
             <Button
                     android:id="@+id/sendAlert"
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:background="@color/colorPrimary"
+                   android:background="@color/colorPrimaryDark"
                     android:text="Send Alert"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"/>
@@ -219,7 +228,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:background="@color/colorPrimary"
+                   android:background="@color/colorPrimaryDark"
                     android:text="Tow Vehicle"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"/>
@@ -230,7 +239,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:background="@color/colorPrimary"
+                   android:background="@color/colorPrimaryDark"
                     android:text="View Traffic Division"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"/>
@@ -240,7 +249,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:background="@color/colorPrimary"
+                   android:background="@color/colorPrimaryDark"
                     android:text="View RTO offices"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"/>
