--- a/app/src/main/res/layout/item_vehicle.xml
+++ b/app/src/main/res/layout/item_vehicle.xml
@@ -38,24 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputLayout
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content">
 
-                <EditText
-                        android:background="@null"
-                        android:focusable="false"
-                        android:focusableInTouchMode="false"
-                        android:id="@+id/regNo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Reg No."
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:textColor="@android:color/black"/>
-
-            </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
                     android:layout_weight="1"
                     android:layout_marginLeft="5dp"
@@ -96,7 +79,47 @@
 
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
+        <android.support.design.widget.TextInputLayout
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+            <EditText
+                    android:background="@null"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:id="@+id/regNo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Reg No."
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"/>
+
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <EditText
+                    android:background="@null"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:id="@+id/chasisNo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Chasis No"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"/>
+
+        </android.support.design.widget.TextInputLayout>
         <LinearLayout
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
@@ -105,24 +128,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputLayout
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content">
 
-                <EditText
-                        android:background="@null"
-                        android:focusable="false"
-                        android:focusableInTouchMode="false"
-                        android:id="@+id/chasisNo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Chasis No"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:textColor="@android:color/black"/>
-
-            </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
                     android:layout_weight="1"
                     android:layout_width="0dp"
