--- a/app/src/main/res/drawable/diagnoal.xml
+++ b/app/src/main/res/drawable/diagnoal.xml
@@ -12,7 +12,7 @@
 
     <path
             android:name="light_triangle"
-            android:fillColor="#00bcd4"
+            android:fillColor="#4DD0E1"
             android:pathData="M 0,0 L 100,0 0,100 z"/>
 
 </vector>
