--- a/app/src/main/res/layout/activity_add_licence.xml
+++ b/app/src/main/res/layout/activity_add_licence.xml
@@ -44,6 +44,7 @@
                                 android:layout_marginBottom="30dp"
                                 android:src="@android:drawable/gallery_thumb"/>
                         <ImageButton
+                                android:visibility="gone"
                                 android:background="@android:color/transparent"
                                 android:id="@+id/img_profile"
                                 android:layout_width="@dimen/logo_w_h"
