--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -36,7 +36,7 @@
                     android:padding="5dp"
                     android:text="@string/lbl_forgot_password"
                     android:textStyle="bold"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/opaque_black"
                     android:textSize="20dp"/>
 
             <TextView
@@ -44,9 +44,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:gravity="center_horizontal"
-
                     android:text="@string/forgot_password_msg"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/opaque_black"
                     android:textSize="14dp"/>
 
             <android.support.design.widget.TextInputLayout
@@ -72,7 +71,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dip"
-                    android:background="@color/colorAccent"
+                    android:background="@color/colorPrimaryDark"
                     android:text="@string/btn_reset_password"
                     android:textColor="@android:color/white"/>
 
