--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -30,6 +30,7 @@
                         android:padding="@dimen/activity_horizontal_margin">
 
                     <ImageButton
+                            android:scaleType="fitXY"
                             android:background="@android:color/transparent"
                             android:id="@+id/img_profile"
                             android:layout_width="@dimen/logo_w_h"
@@ -89,6 +90,7 @@
                             android:layout_height="wrap_content">
 
                         <EditText
+
                                 android:id="@+id/phone"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
