--- a/app/src/main/res/layout/activity_vehicle_detail.xml
+++ b/app/src/main/res/layout/activity_vehicle_detail.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent"
         tools:context=".Authority.VehicleDetail">
     <android.support.design.widget.TextInputLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
